<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.coop.grady.coop.RequestActivity"
    tools:showIn="@layout/activity_request"
    android:orientation="vertical"
    android:weightSum="1">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_number_of_kids"
        android:id="@+id/textView"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimaryDark"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="6"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0"
        android:id="@+id/seek_bar_progress"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_date_and_time"
        android:id="@+id/textView6"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02">

        <EditText
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:hint="@string/mm_dd_yyyy"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/date_edit_text"
            android:layout_weight="0"
            android:layout_marginRight="0dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_date_button"
            android:layout_weight="0"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:src="@android:drawable/ic_menu_today"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/starting_time"
        android:id="@+id/textView8"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16">

        <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:hint="@string/hh_mm"
        android:ems="10"
        android:id="@+id/start_edit_time"
        android:layout_weight="1"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/start_time_button"
            android:src="@android:drawable/presence_away"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forr"
            android:id="@+id/textView7"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/number_hours"
            android:hint="@string/number"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hour"
            android:id="@+id/textView9"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_request"
        android:id="@+id/submit_button"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>
