<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.coop.grady.coop.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="204dp"
        android:layout_height="65dp"
        android:text="@string/user_info_button"
        android:id="@+id/set_date_button"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/welcome"
        android:layout_alignLeft="@+id/goto_accept_button"
        android:layout_alignStart="@+id/goto_accept_button"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/title_activity_request"
        android:id="@+id/goto_request_button"
        android:layout_below="@+id/set_date_button"
        android:layout_marginRight="62dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="2dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/accept_a_sit"
        android:id="@+id/goto_accept_button"
        android:layout_marginLeft="62dp"
        android:layout_below="@id/set_date_button"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="2dp"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/my_sits"
        android:id="@+id/goto_my_requests_button"
        android:layout_below="@+id/goto_request_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="62dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="2dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/roster_button"
        android:id="@+id/goto_roster_button"
        android:layout_below="@id/goto_accept_button"
        android:layout_marginLeft="62dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>
