<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserInfoActivity"
    tools:showIn="@layout/activity_user_info">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/user_picture"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/user_picture"
        android:layout_toEndOf="@id/user_picture"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="30dp"
        android:id="@+id/user_info_name"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="5dp"
        android:text="@string/first_last"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kids"
        android:layout_toRightOf="@id/user_picture"
        android:layout_toEndOf="@id/user_picture"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@id/user_info_name"
        android:layout_marginTop="10dp"
        android:id="@+id/kids_string"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/kids_string"
        android:layout_toRightOf="@id/kids_string"
        android:layout_toEndOf="@id/kids_string"
        android:id="@+id/user_kids_fill_space"
        android:inputType="number"
        android:ems="2"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_string"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@id/user_picture"
        android:layout_marginTop="10dp"
        android:id="@+id/address_string"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_alignBaseline="@id/address_string"
        android:layout_toRightOf="@id/address_string"
        android:layout_toEndOf="@id/address_string"
        android:id="@+id/user_address_fill_space"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@id/user_address_fill_space"
        android:layout_marginTop="10dp"
        android:id="@+id/points_string"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_alignBaseline="@id/points_string"
        android:layout_toRightOf="@id/points_string"
        android:layout_toEndOf="@id/points_string"
        android:layout_below="@id/user_address_fill_space"
        android:layout_marginTop="10dp"
        android:id="@+id/user_points"
        android:textColor="@color/colorAccent"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/points_string"
        android:layout_marginTop="25dp"
        android:text="@string/update_user_info"
        android:id="@+id/update_user_info_button"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_user_info_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/choose_image"
        android:textColor="@color/colorPrimary"
        android:id="@+id/choose_image_button"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_image_button"
        android:id="@+id/upload_image_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/upload_image"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>
