<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.coop.grady.coop.AcceptActivity"
    tools:showIn="@layout/activity_accept">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requester"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/accept_requester_string"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/accept_requester_string"
        android:layout_toRightOf="@id/accept_requester_string"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/accept_requester"
        android:textColor="@color/colorAccent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@id/accept_requester"
        android:layout_marginTop="15dp"
        android:id="@+id/accept_date_string"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accept_requester"
        android:layout_toEndOf="@id/accept_date_string"
        android:layout_toRightOf="@id/accept_date_string"
        android:id="@+id/accept_date"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_alignBaseline="@id/accept_date_string"
        android:textColor="@color/colorAccent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kids"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@id/accept_date_string"
        android:layout_marginTop="15dp"
        android:id="@+id/accept_numKids_string"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_alignBaseline="@id/accept_numKids_string"
        android:layout_toRightOf="@id/accept_numKids_string"
        android:layout_toEndOf="@id/accept_numKids_string"
        android:id="@+id/accept_numKids"
        android:textColor="@color/colorAccent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_alignBaseline="@id/accept_numKids_string"
        android:layout_marginLeft="175dp"
        android:id="@+id/accept_numHours_string"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_alignBaseline="@id/accept_numHours_string"
        android:layout_toEndOf="@id/accept_numHours_string"
        android:layout_toRightOf="@id/accept_numHours_string"
        android:id="@+id/accept_numHours"
        android:textColor="@color/colorAccent"/>


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/accept_request"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:id="@+id/accept_button"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/complete_request"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:id="@+id/complete_button"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>
