<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.coop.grady.coop.AccountCreationActivity"
    tools:showIn="@layout/activity_account_creation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="22sp"
        android:text="@string/first_name_string"
        android:id="@+id/first_name_string"/>
    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/first_name_string"
        android:layout_alignBaseline="@id/first_name_string"
        android:layout_toEndOf="@id/first_name_string"
        android:inputType="text"
        android:id="@+id/create_first_name"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="22sp"
        android:text="@string/last_name_string"
        android:id="@+id/last_name_string"
        android:layout_below="@id/first_name_string"
        android:layout_marginTop="12dp"/>
    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:inputType="text"
        android:layout_toRightOf="@id/last_name_string"
        android:layout_toEndOf="@id/last_name_string"
        android:layout_alignBaseline="@id/last_name_string"
        android:id="@+id/create_last_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name_string"
        android:id="@+id/numKids_string"
        android:text="@string/numKids_string"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="22sp"
        android:layout_marginTop="12dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:ems="2"
        android:id="@+id/create_numKids"
        android:layout_alignBaseline="@+id/numKids_string"
        android:layout_toRightOf="@+id/numKids_string"
        android:layout_toEndOf="@+id/numKids_string"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/address_string"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="22sp"
        android:layout_below="@id/numKids_string"
        android:layout_marginTop="12dp"
        android:id="@+id/address_string"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/create_numKids"
        android:layout_toRightOf="@id/address_string"
        android:layout_toEndOf="@id/address_string"
        android:inputType="textPostalAddress"
        android:layout_alignBaseline="@id/address_string"
        android:id="@+id/create_address"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:layout_below="@id/address_string"
        android:id="@+id/email_string"
        android:text="@string/email_string"
        android:layout_marginTop="32dp"/>
    <EditText
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/email_string"
        android:layout_toRightOf="@+id/email_string"
        android:layout_alignBaseline="@id/email_string"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        android:id="@+id/create_email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_string"
        android:layout_marginTop="12dp"
        android:text="@string/password_string"
        android:textSize="22sp"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/password_string"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:layout_toEndOf="@id/password_string"
        android:layout_toRightOf="@id/password_string"
        android:layout_alignBaseline="@id/password_string"
        android:id="@+id/create_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_string"
        android:layout_marginTop="15dp"
        android:text="@string/check_password_string"
        android:textSize="16sp"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/check_password_string"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:layout_toEndOf="@id/check_password_string"
        android:layout_toRightOf="@id/check_password_string"
        android:layout_alignBaseline="@id/check_password_string"
        android:id="@+id/check_password"
        android:layout_below="@id/create_password"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="75dp"
        android:id="@+id/create_account_button"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/rounded_button"
        android:layout_below="@id/create_password"/>



</RelativeLayout>
