<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="75dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:textSize="25dp"
        android:id="@+id/date_string"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="25dp"
        android:layout_toRightOf="@id/date_string"
        android:id="@+id/date_fill_space"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:paddingLeft="5dp"
        android:text="@string/requester_string"
        android:layout_below="@id/date_fill_space"
        android:id="@+id/requester_string"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_toRightOf="@id/requester_string"
        android:layout_alignBaseline="@id/requester_string"
        android:id="@+id/requester_fill_space"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kids"
        android:textSize="16dp"
        android:paddingLeft="40dp"
        android:layout_toRightOf="@id/date_fill_space"
        android:paddingTop="5dp"
        android:id="@+id/kids_string"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/kids_string"
        android:textSize="16dp"
        android:layout_alignBaseline="@id/kids_string"
        android:id="@+id/kids_fill_space"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:textSize="16dp"
        android:layout_below="@id/kids_string"
        android:layout_toRightOf="@id/date_fill_space"
        android:paddingLeft="40dp"
        android:id="@+id/hours_string"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_alignBaseline="@id/hours_string"
        android:layout_toRightOf="@id/hours_string"
        android:id="@+id/hours_fill_space"
        android:textColor="@color/colorAccent"/>


</RelativeLayout>